cmake_minimum_required(VERSION 3.17)
project(cpl07_1110)

set(CMAKE_CXX_STANDARD 14)

add_executable(adv1 n^n的末位数字.cpp)
add_executable(adv2_Quadrat Quadrat.cpp)
add_executable(1  "1_一個神祕的遞迴函式 .cpp")
add_executable(2 2_大數加減法.cpp)
add_executable(3 "3_Closest Prime Number.cpp")
add_executable(4 "4_Definite Integral.cpp")