cmake_minimum_required(VERSION 3.17)
project(hw02)

set(CMAKE_CXX_STANDARD 14)

add_executable(1 尋找單字出現次數.cpp)
add_executable(2 三則運算.cpp)
add_executable(3 字串加解密.cpp)
add_executable(4 簡易華容道.cpp)
add_executable(5 猜數字遊戲.cpp)
add_executable(6 "簡易版Depth First Search.cpp")
add_executable(jimmy jimmy_hanoi.c)