cmake_minimum_required(VERSION 3.17)
project(function_preview)

set(CMAKE_CXX_STANDARD 14)


add_executable(p10 p10.cpp)

add_executable(p10_modify p10_modify.cpp)
add_executable(p44 p44.cpp)
add_executable(p46-47 p46-47.cpp)
add_executable(p57 p57.cpp)
add_executable(p38 p38.cpp)
add_executable(p39 p39.cpp)
add_executable(p41 p41.cpp)
add_executable(p42 p42.cpp)
add_executable(p25 p25.cpp)
add_executable(p29 p29.cpp)