cmake_minimum_required(VERSION 3.17)
project(untitled1)

set(CMAKE_CXX_STANDARD 14)

add_executable(p23 p23.cpp)
add_executable(p24 p24.cpp)
add_executable(p26 p26.cpp)
add_executable(p30 p30.cpp)
add_executable(p33 p33.cpp)
add_executable(p35 p35.cpp)
add_executable(p36 p36.cpp)
add_executable(p39 p39.cpp)